--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -416,7 +416,7 @@ footer.press {
   // Gallery View (Default)
   .results-container {
     padding-left: 3em;
-    margin-top: -2.75em;
+    padding-top: 15px;
 
     #sortAndPerPage, .pagination-search-widgets {
       border-bottom: none;
