--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -10,19 +10,23 @@ works = if @press.subdomain == Services.score_press
 <div id="maincontent">
   <% if has_facet_values?  %>
   <div class="row">
+    <div class="col-sm-12"><h2><%= works %></h2></div>
+  </div>
+  <div class="row">
     <div class="col-sm-3 facets-container">
       <%= render 'catalog/search_sidebar' %>
     </div>
     <div class="col-sm-9 results-container">
-      <h2><%= works %></h2>
       <%= render 'catalog/search_results' %>
     </div>
   </div>
   <% else %>
   <div class="row">
+    <div class="col-sm-12"><h2><%= works %></h2></div>
+  </div>
+  <div class="row">
     <div class="col-sm-1">&nbsp;</div>
     <div class="col-sm-11 results-container">
-      <h2><%= works %></h2>
       <%= render 'catalog/search_results' %>
     </div>
   </div>
