Resolves CSB-261 Add aria-label to TOC buttons

--- a/app/views/e_pubs/show_pdf.html.erb
+++ b/app/views/e_pubs/show_pdf.html.erb
@@ -671,9 +671,9 @@
           var template =
             '<div id="toolbarSidebar">' +
               '<div class="splitToolbarButton toggled">' +
-                '<button id="viewOutline" class="toolbarButton toggled" title="Show Table of Contents (double-click to expand/collapse all items)" tabindex="-1">Table of Contents</button>' +
-                '<button id="viewThumbnail" class="toolbarButton" title="Show Thumbnails" tabindex="-1">Thumbnails</button>' +
-                '<button id="viewAttachments" class="toolbarButton" title="Show Attachments" tabindex="-1">Attachments</button>' +
+                '<button id="viewOutline" class="toolbarButton toggled" aria-label="table of contents" title="Show Table of Contents (double-click to expand/collapse all items)" tabindex="-1">Table of Contents</button>' +
+                '<button id="viewThumbnail" class="toolbarButton" aria-label="thumbnails" title="Show Thumbnails" tabindex="-1">Thumbnails</button>' +
+                '<button id="viewAttachments" class="toolbarButton" aria-label="attachments" title="Show Attachments" tabindex="-1">Attachments</button>' +
               '</div>' +
             '</div>' +
             '<div id="sidebarContent">' +
@@ -685,9 +685,9 @@
           var template =
             '<div id="toolbarSidebar">' +
               '<div class="splitToolbarButton toggled hidden">' +
-                '<button id="viewOutline" class="toolbarButton" title="Show Table of Contents (double-click to expand/collapse all items)" tabindex="-1">Table of Contents</button>' +
-                '<button id="viewThumbnail" class="toolbarButton toggled" title="Show Thumbnails" tabindex="-1">Thumbnails</button>' +
-                '<button id="viewAttachments" class="toolbarButton" title="Show Attachments" tabindex="-1">Attachments</button>' +
+                '<button id="viewOutline" class="toolbarButton" aria-label="table of contents" title="Show Table of Contents (double-click to expand/collapse all items)" tabindex="-1">Table of Contents</button>' +
+                '<button id="viewThumbnail" class="toolbarButton toggled" aria-label="thumbnails" title="Show Thumbnails" tabindex="-1">Thumbnails</button>' +
+                '<button id="viewAttachments" class="toolbarButton" aria-label="table of attachments" title="Show Attachments" tabindex="-1">Attachments</button>' +
               '</div>' +
             '</div>' +
             '<div id="sidebarContent">' +
