--- a/app/views/authentications/show.html.erb
+++ b/app/views/authentications/show.html.erb
@@ -49,56 +49,60 @@
     <%= link_to "<< Go back to previous page", @presenter.return_location %>
   </div>
   <div class="row">
-    <div class="col-sm-8 margin-padding">
-      <div class="col-sm-12 border-padding">
-        <h1 class="heading">Log in with your Institution</h1>
-        <p>Search and click your institution to log in, or you can access this resource on-campus.</p>
-        <h2 class="heading">Search for your institution:</h2>
-        <input type="text" id="searchInstitutionInput" onkeyup="searchInstitutionList()" placeholder="Enter your institution's name" title="Type in an institution name">
-        <div id="institutionListHeading">All purchasing institutions</div>
-        <ul id="institutionList">
-          <% @presenter.institutions.each do |institution| %>
-          <li>
-            <% if institution.shibboleth? %>
-              <%= link_to(shib_login_url(@presenter.return_location, entityID: institution.entity_id)) do %>
-                <span><%= institution.name %></span>
+    <div class="col-sm-7">
+      <h1>Log in with your Institution</h1>
+      <p class="lead">Search and click your institution to log in, or you can access this resource on-campus.</p>
+      <div class="row">  
+        <div class="col-sm-12">
+          <h2>Search for your institution:</h2>
+          <input type="text" id="searchInstitutionInput" onkeyup="searchInstitutionList()" placeholder="Enter your institution's name" aria-label="Type in an institution name to search">
+          <h3 id="institutionListHeading">All purchasing institutions</h3>
+          <ul id="institutionList">
+            <% @presenter.institutions.each do |institution| %>
+            <li>
+              <% if institution.shibboleth? %>
+                <%= link_to(shib_login_url(@presenter.return_location, entityID: institution.entity_id)) do %>
+                  <span><%= institution.name %></span>
+                <% end %>
+              <% elsif institution.catalog_url.present? %>
+                <%= link_to(institution.catalog_url) do %>
+                  <span><%= institution.name %></span>
+                <% end %>
+              <% else %>
+                <div class="info">
+                  <span><%= institution.name %></span>
+                  <button onclick="showInstitutionInfoWindow('<%= institution.name %>')">
+                    <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+                  </button>
+                </div>
               <% end %>
-            <% elsif institution.catalog_url.present? %>
-              <%= link_to(institution.catalog_url) do %>
-                <span><%= institution.name %></span>
-              <% end %>
-            <% else %>
-              <div class="info">
-                <span><%= institution.name %></span>
-                <button onclick="showInstitutionInfoWindow('<%= institution.name %>')">
-                  <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-                </button>
-              </div>
+            </li>
             <% end %>
-          </li>
-          <% end %>
-          <li id="lastInstitutionListItem" style="display: none;">Empty</li>
-        </ul>
+            <li id="lastInstitutionListItem" style="display: none;">Empty</li>
+          </ul>
+        </div>
       </div>
     </div>
-    <div class="col-sm-4 margin-padding">
-      <div class="col-sm-12 border-padding">
-        <% if @presenter.publisher_individual_subscribers? %>
-          <h2 class="heading">Individual access</h2>
-          <p>If you have purchased an individual subscription.</p>
-          <p class="text-left"><a class="btn btn-default" href="<%= main_app.shib_login_url(@presenter.return_location, entityID: Settings.shibboleth.default_idp.entity_id) %>" data-turbolinks="false">Sign in as individual</a></p>
-        <% end %>
-        <h2 class="heading">Can't find your institution?</h2>
-        <p>Ask your librarian to purchase the <%= @presenter.publisher_name %></p>
-        <% if @presenter.monograph_other_options? %>
-          <h2 class="heading">Other Options</h2>
-          <% if @presenter.monograph_buy_url? %>
-            <p>You can also <%= link_to 'buy this book', @presenter.monograph_buy_url, target: :_blank %></p>
+    <div class="col-sm-4 col-sm-offset-1">
+      <div class="row">
+        <div class="col-sm-12">
+          <% if @presenter.publisher_individual_subscribers? %>
+            <h2>Individual access</h2>
+            <p>If you have purchased an individual subscription.</p>
+            <p class="text-left"><a class="btn btn-default" href="<%= main_app.shib_login_url(@presenter.return_location, entityID: Settings.shibboleth.default_idp.entity_id) %>" data-turbolinks="false">Sign in as individual</a></p>
           <% end %>
-          <% if @presenter.monograph_worldcat_url? %>
-            <p>Or find it at <%= link_to 'WorldCat.org', @presenter.monograph_worldcat_url, target: :_blank %></p>
+          <h2 >Can't find your institution?</h2>
+          <p>Ask your librarian to purchase the <%= @presenter.publisher_name %></p>
+          <% if @presenter.monograph_other_options? %>
+            <h2 class="heading">Other Options</h2>
+            <% if @presenter.monograph_buy_url? %>
+              <p>You can also <%= link_to 'buy this book', @presenter.monograph_buy_url, target: :_blank %></p>
+            <% end %>
+            <% if @presenter.monograph_worldcat_url? %>
+              <p>Or find it at <%= link_to 'WorldCat.org', @presenter.monograph_worldcat_url, target: :_blank %></p>
+            <% end %>
           <% end %>
-        <% end %>
+        </div>
       </div>
     </div>
   </div>
@@ -106,7 +110,7 @@
     <div class="modal-dialog modal-sm vertical-align-center">
       <div class="modal-content">
         <div class="modal-body">
-          <p>This collection is using Single Sign-On for login, and <span id="name"></span> does not support this login method. You will need to access this collection on-campus or through your library's website.</p>
+          <p class="lead">This collection is using Single Sign-On for login, and <span id="name"></span> does not support this login method. You will need to access this collection on-campus or through your library's website.</p>
           <p>Please contact your librarian if you have any questions about how to log in.</p>
           <button type="button" data-dismiss="modal" class="btn btn-default">Got it</button>
         </div>
